update non-API docs' links

--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -46,12 +46,12 @@
    "id": "0767b203-ad69-428f-b8c1-50ceab758b35",
    "metadata": {},
    "source": [
-    "This guide demonstrates the functionality available in the Qiskit SDK for performing classical feedforward and control flow. These features are sometimes referred to collectively as \"dynamic circuits.\" Classical feedforward refers to the ability to measure qubits in the middle of a circuit and perform additional quantum operations that depend on the measurement outcome. Qiskit supports four control flow constructs for classical feedforward, each implemented as a method on [`QuantumCircuit`](../api/qiskit/qiskit.circuit.QuantumCircuit). The constructs and their corresponding methods are:\n",
+    "This guide demonstrates the functionality available in the Qiskit SDK for performing classical feedforward and control flow. These features are sometimes referred to collectively as \"dynamic circuits.\" Classical feedforward refers to the ability to measure qubits in the middle of a circuit and perform additional quantum operations that depend on the measurement outcome. Qiskit supports four control flow constructs for classical feedforward, each implemented as a method on [`QuantumCircuit`](../api/qiskit/circuit-quantum-circuit). The constructs and their corresponding methods are:\n",
     "\n",
-    "- If statement - [`QuantumCircuit.if_test`](../api/qiskit/qiskit.circuit.QuantumCircuit#if_test)\n",
-    "- Switch statement - [`QuantumCircuit.switch`](../api/qiskit/qiskit.circuit.QuantumCircuit#switch)\n",
-    "- For loop - [`QuantumCircuit.for_loop`](../api/qiskit/qiskit.circuit.QuantumCircuit#for_loop)\n",
-    "- While loop - [`QuantumCircuit.while_loop`](../api/qiskit/qiskit.circuit.QuantumCircuit#while_loop)\n",
+    "- If statement - [`QuantumCircuit.if_test`](../api/qiskit/circuit-quantum-circuit#if_test)\n",
+    "- Switch statement - [`QuantumCircuit.switch`](../api/qiskit/circuit-quantum-circuit#switch)\n",
+    "- For loop - [`QuantumCircuit.for_loop`](../api/qiskit/circuit-quantum-circuit#for_loop)\n",
+    "- While loop - [`QuantumCircuit.while_loop`](../api/qiskit/circuit-quantum-circuit#while_loop)\n",
     "\n",
     "Each of these methods returns a [context manager](https://docs.python.org/3/reference/datamodel.html#with-statement-context-managers) and is typically used in a `with` statement. In the rest of this guide, we will explain each of these constructs and how to use them.\n",
     "\n",
@@ -419,7 +419,7 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "  -  See an example of dynamic circuits in the [Repeat until success](https://learning.quantum.ibm.com/tutorial/repeat-until-success) tutorial.\n",
-    "  -  Review the [circuit library API](/api/qiskit/circuit_library) reference.\n",
+    "  -  Review the [circuit library API](/api/qiskit/circuit-library) reference.\n",
     "</Admonition>"
    ]
   }
