--- a/docs/guides/custom-backend.ipynb
+++ b/docs/guides/custom-backend.ipynb
@@ -76,12 +76,12 @@
    "source": [
     "## Understand the Provider, BackendV2, and Target interfaces\n",
     "\n",
-    "Before beginning, it is helpful to understand the usage and purpose of the [`Provider`](../api/qiskit/providers), [`BackendV2`](../api/qiskit/qiskit.providers.BackendV2), and [`Target`](../api/qiskit/qiskit.transpiler.Target) objects.\n",
+    "Before beginning, it is helpful to understand the usage and purpose of the [`Provider`](../api/qiskit/providers), [`BackendV2`](../api/qiskit/providers-backend-v-2), and [`Target`](../api/qiskit/transpiler-target) objects.\n",
     "\n",
     "- If you have a quantum device or simulator that you want to integrate into the Qiskit SDK, you need to write your own `Provider` class. This class serves a single purpose: to get backend objects that you provide. This is where any required credential and/or authentication tasks are handled. Once instantiated, the provider object will then provide a list of backends as well as the ability to acquire/instantiate backends.\n",
     "\n",
     "- Next, the backend classes provide the interface between the Qiskit SDK and the hardware or simulator that will execute circuits. They include all necessary information to describe a backend to the transpiler so that it can optimize any circuit according to its constraints. A `BackendV2` is built of four main parts:\n",
-    "  - A [`Target`](../api/qiskit/qiskit.transpiler.Target) property, which contains a description of the constraints of the backend and provides a model of the backend for the transpiler\n",
+    "  - A [`Target`](../api/qiskit/transpiler-target) property, which contains a description of the constraints of the backend and provides a model of the backend for the transpiler\n",
     "  - A `max_circuits` property that defines a limit on the number of circuits a backend can execute in a single job\n",
     "  - A `run()` method that accept job submissions\n",
     "  - A set of `_default_options` to define the user configurable options and their default values"
@@ -94,9 +94,9 @@
    "source": [
     "## Create a custom BackendV2\n",
     "\n",
-    "The `BackendV2` object is an abstract class used for all backend objects created by a provider (either within `qiskit.providers` or another library such as [`qiskit_ibm_runtime.IBMBackend`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.IBMBackend)).  As mentioned above, these objects contain several attributes, including a [`Target`](/api/qiskit/qiskit.transpiler.Target). The `Target` contains information that specifies the backend's attributes - such as the [`Coupling Map`](/api/qiskit/qiskit.transpiler.CouplingMap), list of [`Instructions`](/api/qiskit/qiskit.circuit.Instruction), and others - to the transpiler.  In addition to the `Target`, one can also define pulse-level details such as the [`DriveChannel`](/api/qiskit/qiskit.pulse.channels.DriveChannel) or [`ControlChannel`](/api/qiskit/qiskit.pulse.channels.ControlChannel).\n",
+    "The `BackendV2` object is an abstract class used for all backend objects created by a provider (either within `qiskit.providers` or another library such as [`qiskit_ibm_runtime.IBMBackend`](../api/qiskit-ibm-runtime/ibm-backend)).  As mentioned above, these objects contain several attributes, including a [`Target`](/api/qiskit/transpiler-target). The `Target` contains information that specifies the backend's attributes - such as the [`Coupling Map`](/api/qiskit/transpiler-coupling-map), list of [`Instructions`](/api/qiskit/circuit-instruction), and others - to the transpiler.  In addition to the `Target`, one can also define pulse-level details such as the [`DriveChannel`](/api/qiskit/pulse-channels-drive-channel) or [`ControlChannel`](/api/qiskit/pulse-channels-control-channel).\n",
     "\n",
-    "The following example demonstrates this customization by creating a simulated multi-chip backend, where each chip possesses a heavy-hex connectivity.  The example specifies the backend's two-qubit gate set to be [`CZGates`](../api/qiskit/qiskit.circuit.library.CZGate) within each chip and [`CXGates`](../api/qiskit/qiskit.circuit.library.ECRGate) between chips.  First, create your own `BackendV2` and customize its `Target` with single and two-qubit gates according to the previously described constraints.\n",
+    "The following example demonstrates this customization by creating a simulated multi-chip backend, where each chip possesses a heavy-hex connectivity.  The example specifies the backend's two-qubit gate set to be [`CZGates`](../api/qiskit/circuit-library-cz-gate) within each chip and [`CXGates`](../api/qiskit/circuit-library-ecr-gate) between chips.  First, create your own `BackendV2` and customize its `Target` with single and two-qubit gates according to the previously described constraints.\n",
     "\n",
     "<Admonition type=\"tip\" title=\"graphviz library\">\n",
     "Plotting a coupling map requires the [`graphviz`](https://graphviz.org/) library to be installed.\n",
@@ -249,7 +249,7 @@
    "source": [
     "### Visualize backends\n",
     "\n",
-    "You can view the connectivity graph of this new class with the [`plot_gate_map()`](../api/qiskit/qiskit.visualization.plot_gate_map) method from the `qiskit.visualization` module.  This method, along with [`plot_coupling_map()`](../api/qiskit/qiskit.visualization.plot_coupling_map) and [`plot_circuit_layout()`](../api/qiskit/qiskit.visualization.plot_circuit_layout), are helpful tools for visualizing the qubit arrangement of a backend, as well as how a circuit is laid out across the qubits of a backend.  This example creates a backend containing three small heavy-hex chips. It specifies a set of coordinates to arrange the qubits, as well as a set of custom colors for the differing two-qubit gates."
+    "You can view the connectivity graph of this new class with the [`plot_gate_map()`](../api/qiskit/visualization-plot-gate-map) method from the `qiskit.visualization` module.  This method, along with [`plot_coupling_map()`](../api/qiskit/visualization-plot-coupling-map) and [`plot_circuit_layout()`](../api/qiskit/visualization-plot-circuit-layout), are helpful tools for visualizing the qubit arrangement of a backend, as well as how a circuit is laid out across the qubits of a backend.  This example creates a backend containing three small heavy-hex chips. It specifies a set of coordinates to arrange the qubits, as well as a set of custom colors for the differing two-qubit gates."
    ]
   },
   {
@@ -367,7 +367,7 @@
    "source": [
     "## Transpile against custom backends\n",
     "\n",
-    "Now that a custom backend with its own unique [`Target`](../api/qiskit/qiskit.transpiler.Target) has been defined, it is straightforward to transpile quantum circuits against this backend, since all the relevant constraints (basis gates, qubit connectivity, and so forth) needed for transpiler passes are contained within this attribute. The next example builds a circuit that creates a large GHZ state and transpiles it against the backend constructed above."
+    "Now that a custom backend with its own unique [`Target`](../api/qiskit/transpiler-target) has been defined, it is straightforward to transpile quantum circuits against this backend, since all the relevant constraints (basis gates, qubit connectivity, and so forth) needed for transpiler passes are contained within this attribute. The next example builds a circuit that creates a large GHZ state and transpiles it against the backend constructed above."
    ]
   },
   {
@@ -430,7 +430,7 @@
    "id": "58625e26-e078-4ee6-8549-362762450a3b",
    "metadata": {},
    "source": [
-    "The transpiled circuit now contains a mixture of `CZ` and `ECR` gates,which we specified as the basis gates in the backend's `Target`.  There are also quite a few more gates than you started with because of the need to insert SWAP instructions after choosing a layout.  Below, the [`plot_circuit_layout()`](/api/qiskit/qiskit.visualization.plot_circuit_layout) visualization tool is used to specify which qubits and two-qubit channels were used in this circuit."
+    "The transpiled circuit now contains a mixture of `CZ` and `ECR` gates,which we specified as the basis gates in the backend's `Target`.  There are also quite a few more gates than you started with because of the need to insert SWAP instructions after choosing a layout.  Below, the [`plot_circuit_layout()`](/api/qiskit/visualization-plot-circuit-layout) visualization tool is used to specify which qubits and two-qubit channels were used in this circuit."
    ]
   },
   {
