--- a/docs/guides/function-template-hamiltonian-simulation.ipynb
+++ b/docs/guides/function-template-hamiltonian-simulation.ipynb
@@ -593,7 +593,7 @@
     "\n",
     "Use `qiskit-ibm-catalog` to authenticate to `QiskitServerless` with your API token, which you can find in your [IBM Quantum&trade; account](https://quantum.ibm.com/account), and upload the program.\n",
     "\n",
-    "You can optionally use `save_account()` to save your credentials (see the [\"Authenticate to the service\" step](/guides/setup-channel#save-account)) in the Set up to use IBM Quantum Platform guide. Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`.](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#save_account)"
+    "You can optionally use `save_account()` to save your credentials (see the [\"Authenticate to the service\" step](/guides/setup-channel#save-account)) in the Set up to use IBM Quantum Platform guide. Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`.](/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account)"
    ]
   },
   {
