--- a/docs/guides/ibm-circuit-function.ipynb
+++ b/docs/guides/ibm-circuit-function.ipynb
@@ -287,9 +287,9 @@
    "id": "75d7cbba",
    "metadata": {},
    "source": [
-    "The output of a Circuit function is a [PrimitiveResult](/api/qiskit/qiskit.primitives.PrimitiveResult), which contains two fields:\n",
+    "The output of a Circuit function is a [PrimitiveResult](/api/qiskit/primitives-primitive-result), which contains two fields:\n",
     "\n",
-    "- One or more [PubResult](/api/qiskit/qiskit.primitives.PubResult) objects. These can be indexed directly from the `PrimitiveResult`.\n",
+    "- One or more [PubResult](/api/qiskit/primitives-pub-result) objects. These can be indexed directly from the `PrimitiveResult`.\n",
     "\n",
     "- Job-level metadata.\n",
     "\n",
