--- a/docs/guides/measure-qubits.mdx
+++ b/docs/guides/measure-qubits.mdx
@@ -20,7 +20,7 @@ There are several ways to apply measurements to a circuit:
 
 ### `QuantumCircuit.measure` method
 
-Use the [`measure`](/api/qiskit/qiskit.circuit.QuantumCircuit#measure) method to measure a [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit-class).
+Use the [`measure`](/api/qiskit/circuit-quantum-circuit#measure) method to measure a [`QuantumCircuit`](/api/qiskit/circuit-quantum-circuit#quantumcircuit-class).
 
 Examples:
 
@@ -55,7 +55,7 @@ qc.append(Measure(), [0], [0])  # measure qubit 0 into clbit 0
 
 ### `QuantumCircuit.measure_all` method
 
-To measure all qubits into the corresponding classical bits, use the [`measure_all`](/api/qiskit/qiskit.circuit.QuantumCircuit#measure_all) method. By default, this method adds new classical bits in a `ClassicalRegister` to store these measurements.
+To measure all qubits into the corresponding classical bits, use the [`measure_all`](/api/qiskit/circuit-quantum-circuit#measure_all) method. By default, this method adds new classical bits in a `ClassicalRegister` to store these measurements.
 
 ```python
 from qiskit import QuantumCircuit
@@ -67,7 +67,7 @@ qc.measure_all() # Measure all qubits.
 
 ### `QuantumCircuit.measure_active` method
 
-To measure all qubits that are not idle, use the [`measure_active`](/api/qiskit/qiskit.circuit.QuantumCircuit#measure_active) method. This method creates a new `ClassicalRegister` with a size equal to the number of non-idle qubits being measured.
+To measure all qubits that are not idle, use the [`measure_active`](/api/qiskit/circuit-quantum-circuit#measure_active) method. This method creates a new `ClassicalRegister` with a size equal to the number of non-idle qubits being measured.
 
 ```python
 from qiskit import QuantumCircuit
@@ -90,7 +90,7 @@ qc.measure_active() # Measure qubits that are not idle, i.e., qubits 0 and 2.
 
 <Admonition type="tip" title="Recommendations">
 - [`Measure`](/api/qiskit/circuit#qiskit.circuit.Measure) class
-- [`measure_all`](/api/qiskit/qiskit.circuit.QuantumCircuit#measure_all) method
-- [`measure_active`](/api/qiskit/qiskit.circuit.QuantumCircuit#measure_active) method
+- [`measure_all`](/api/qiskit/circuit-quantum-circuit#measure_all) method
+- [`measure_active`](/api/qiskit/circuit-quantum-circuit#measure_active) method
 - [`random_circuit`](/api/qiskit/circuit#random_circuit) method
 </Admonition>
