--- a/docs/guides/operator-class.ipynb
+++ b/docs/guides/operator-class.ipynb
@@ -46,7 +46,7 @@
    "id": "eb4d8e3f-5efb-4223-a15b-d6ef541370dc",
    "metadata": {},
    "source": [
-    "This page shows how to use the [`Operator`](/api/qiskit/qiskit.quantum_info.Operator) class. For a high-level overview of operator representations in Qiskit, including the `Operator` class and others, see [Overview of operator classes](./operators-overview)."
+    "This page shows how to use the [`Operator`](/api/qiskit/quantum-info-operator) class. For a high-level overview of operator representations in Qiskit, including the `Operator` class and others, see [Overview of operator classes](./operators-overview)."
    ]
   },
   {
@@ -697,7 +697,7 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "  - Explore the [Operator API](/api/qiskit/qiskit.quantum_info.Operator#operator) reference.\n",
+    "  - Explore the [Operator API](/api/qiskit/quantum-info-operator#operator) reference.\n",
     "</Admonition>"
    ]
   }
