--- a/docs/guides/plot-quantum-states.ipynb
+++ b/docs/guides/plot-quantum-states.ipynb
@@ -134,7 +134,7 @@
     "\n",
     "  <CodeCellPlaceholder tag=\"id-tabs-city\" />\n",
     "\n",
-    "  See the [API documentation](/api/qiskit/qiskit.visualization.plot_state_city) for more information.\n",
+    "  See the [API documentation](/api/qiskit/visualization-plot-state-city) for more information.\n",
     "\n",
     "\n",
     "</TabItem>\n",
@@ -167,7 +167,7 @@
     "\n",
     "  <CodeCellPlaceholder tag=\"id-tabs-hinton\" />\n",
     "\n",
-    "  See the [API documentation](/api/qiskit/qiskit.visualization.plot_state_hinton) for more information.\n",
+    "  See the [API documentation](/api/qiskit/visualization-plot-state-hinton) for more information.\n",
     "\n",
     "\n",
     "</TabItem>\n",
@@ -199,7 +199,7 @@
     "\n",
     "  <CodeCellPlaceholder tag=\"id-tabs-paulivec-2\" />\n",
     "\n",
-    "  See the [API documentation](/api/qiskit/qiskit.visualization.plot_state_paulivec) for more information.\n",
+    "  See the [API documentation](/api/qiskit/visualization-plot-state-paulivec) for more information.\n",
     "\n",
     "\n",
     "</TabItem>\n",
@@ -209,7 +209,7 @@
     "\n",
     "  <CodeCellPlaceholder tag=\"id-tabs-qsphere\" />\n",
     "\n",
-    "  See the [API documentation](/api/qiskit/qiskit.visualization.plot_state_qsphere) for more information.\n",
+    "  See the [API documentation](/api/qiskit/visualization-plot-state-qsphere) for more information.\n",
     "\n",
     "</TabItem>\n",
     "<TabItem value=\"Bloch\" label=\"Bloch\">\n",
@@ -218,7 +218,7 @@
     "\n",
     "  <CodeCellPlaceholder tag=\"id-tabs-bloch\" />\n",
     "\n",
-    "  See the [API documentation](/api/qiskit/qiskit.visualization.plot_bloch_multivector) for more information.\n",
+    "  See the [API documentation](/api/qiskit/visualization-plot-bloch-multivector) for more information.\n",
     "\n",
     "</TabItem>\n",
     "</Tabs>"
