--- a/docs/guides/transpiler-stages.ipynb
+++ b/docs/guides/transpiler-stages.ipynb
@@ -55,7 +55,7 @@
     "5. `optimization`\n",
     "6. `scheduling`\n",
     "\n",
-    "The [`generate_preset_pass_manager`](/api/qiskit/transpiler_preset#qiskit.transpiler.preset_passmanagers.generate_preset_pass_manager) function creates a preset [staged pass manager](/api/qiskit/qiskit.transpiler.StagedPassManager) composed of these stages. The specific passes that make up each stage depends on the arguments passed to `generate_preset_pass_manager`. The `optimization_level` is a positional argument that must be specified; it is an integer that can be 0, 1, 2, or 3. Higher values indicate heavier but more costly optimization (see [Transpilation defaults and configuration options](defaults-and-configuration-options)).\n",
+    "The [`generate_preset_pass_manager`](/api/qiskit/transpiler-preset#qiskit.transpiler.preset_passmanagers.generate_preset_pass_manager) function creates a preset [staged pass manager](/api/qiskit/transpiler-staged-pass-manager) composed of these stages. The specific passes that make up each stage depends on the arguments passed to `generate_preset_pass_manager`. The `optimization_level` is a positional argument that must be specified; it is an integer that can be 0, 1, 2, or 3. Higher values indicate heavier but more costly optimization (see [Transpilation defaults and configuration options](defaults-and-configuration-options)).\n",
     "\n",
     "The recommended way to transpile a circuit is to create a preset staged pass manager and then run that pass manager on the circuit, as described in [Transpile with pass managers](transpile-with-pass-managers). However, a simpler but less customizable alternative is to use the [`transpile`](/api/qiskit/compiler#qiskit.compiler.transpile) function. This function accepts the circuit directly as an argument. As with `generate_preset_pass_manager`, the specific transpiler passes used depend on the arguments, such as `optimization_level`, passed to `transpile`. In fact, internally the `transpile` function calls `generate_preset_pass_manager` to create a preset staged pass manager and runs it on the circuit."
    ]
@@ -233,7 +233,7 @@
    "source": [
     "As you can see, this circuit has to execute a two-qubit gate between qubits 0 and 14, which are very far apart on the connectivity graph.  Running this circuit thus requires inserting SWAP gates to execute all of the two-qubit gates using the `SabreSwap` pass.\n",
     "\n",
-    "Note also that the `SabreSwap` algorithm is different from the larger `SabreLayout` method in the previous stage.  By default, `SabreLayout` runs both layout and routing, and returns the transformed circuit.  This is done for a few particular technical reasons specified in the pass's [API reference page](../api/qiskit/qiskit.transpiler.passes.SabreLayout)."
+    "Note also that the `SabreSwap` algorithm is different from the larger `SabreLayout` method in the previous stage.  By default, `SabreLayout` runs both layout and routing, and returns the transformed circuit.  This is done for a few particular technical reasons specified in the pass's [API reference page](../api/qiskit/transpiler-passes-sabre-layout)."
    ]
   },
   {
@@ -339,14 +339,14 @@
     "\n",
     "This stage centers around decomposing quantum circuits into the basis gate set of the target device, and must fight against the increased depth from the layout and routing stages.  Fortunately, there are many routines for optimizing circuits by either combining or eliminating gates.  In some cases, these methods are so effective that the output circuits have lower depth than the inputs, even after layout and routing to the hardware topology.  In other cases, not much can be done, and the computation may be difficult to perform on noisy devices.  This stage is where the various optimization levels begin to differ.\n",
     "\n",
-    "- For `optimization_level=1`, this stage prepares [`Optimize1qGatesDecomposition`](../api/qiskit/qiskit.transpiler.passes.Optimize1qGatesDecomposition) and [`CXCancellation`](../api/qiskit/qiskit.transpiler.passes.CXCancellation), which combine chains of single-qubit gates and cancel any back-to-back CNOT gates.\n",
-    "- For `optimization_level=2`, this stage uses the [`CommutativeCancellation`](../api/qiskit/qiskit.transpiler.passes.CommutativeCancellation) pass instead of `CXCancellation`, which removes redundant gates by exploiting commutation relations.\n",
+    "- For `optimization_level=1`, this stage prepares [`Optimize1qGatesDecomposition`](../api/qiskit/transpiler-passes-optimize-1-q-gates-decomposition) and [`CXCancellation`](../api/qiskit/transpiler-passes-cx-cancellation), which combine chains of single-qubit gates and cancel any back-to-back CNOT gates.\n",
+    "- For `optimization_level=2`, this stage uses the [`CommutativeCancellation`](../api/qiskit/transpiler-passes-commutative-cancellation) pass instead of `CXCancellation`, which removes redundant gates by exploiting commutation relations.\n",
     "- For `optimization_level=3`, this stage prepares the following passes:\n",
-    "  - [`Collect2qBlocks`](../api/qiskit/qiskit.transpiler.passes.Collect2qBlocks)\n",
-    "  - [`ConsolidateBlocks`](../api/qiskit/qiskit.transpiler.passes.ConsolidateBlocks)\n",
-    "  - [`UnitarySynthesis`](../api/qiskit/qiskit.transpiler.passes.UnitarySynthesis)\n",
-    "  - [`Optimize1qGateDecomposition`](../api/qiskit/qiskit.transpiler.passes.Optimize1qGatesDecomposition)\n",
-    "  - [`CommutativeCancellation`](../api/qiskit/qiskit.transpiler.passes.CommutativeCancellation)\n",
+    "  - [`Collect2qBlocks`](../api/qiskit/transpiler-passes-collect-2-q-blocks)\n",
+    "  - [`ConsolidateBlocks`](../api/qiskit/transpiler-passes-consolidate-blocks)\n",
+    "  - [`UnitarySynthesis`](../api/qiskit/transpiler-passes-unitary-synthesis)\n",
+    "  - [`Optimize1qGateDecomposition`](../api/qiskit/transpiler-passes-optimize-1-q-gates-decomposition)\n",
+    "  - [`CommutativeCancellation`](../api/qiskit/transpiler-passes-commutative-cancellation)\n",
     "\n",
     "\n",
     "Additionally, this stage also executes a few final checks to make sure that all instructions in the circuit are composed of the basis gates available on the target backend.\n",
@@ -488,7 +488,7 @@
    "id": "b4c40470-e0cf-4b55-bb51-5ef39bd3dd52",
    "metadata": {},
    "source": [
-    "Scheduling a circuit involves two parts: analysis and constraint mapping, followed by a padding pass.  The first part requires running a scheduling analysis pass (by default this is [`ALAPSchedulingAnalysis`](../api/qiskit/qiskit.transpiler.passes.ALAPScheduleAnalysis)), which analyzes the circuit and records the start time of each instruction in the circuit into a schedule.  Once the circuit has an initial schedule, additional passes can be run to account for any timing constraints on the target backend.  Finally, a padding pass such as [`PadDelay`](../api/qiskit/qiskit.transpiler.passes.PadDelay) or [`PadDynamicalDecoupling`](../api/qiskit/qiskit.transpiler.passes.PadDynamicalDecoupling) can be executed."
+    "Scheduling a circuit involves two parts: analysis and constraint mapping, followed by a padding pass.  The first part requires running a scheduling analysis pass (by default this is [`ALAPSchedulingAnalysis`](../api/qiskit/transpiler-passes-alap-schedule-analysis)), which analyzes the circuit and records the start time of each instruction in the circuit into a schedule.  Once the circuit has an initial schedule, additional passes can be run to account for any timing constraints on the target backend.  Finally, a padding pass such as [`PadDelay`](../api/qiskit/transpiler-passes-pad-delay) or [`PadDynamicalDecoupling`](../api/qiskit/transpiler-passes-pad-dynamical-decoupling) can be executed."
    ]
   },
   {
