--- a/docs/guides/ai-transpiler-passes.mdx
+++ b/docs/guides/ai-transpiler-passes.mdx
@@ -64,7 +64,7 @@ The `layout_mode` includes the following options:
 
 ## AI circuit synthesis passes
 
-The AI circuit synthesis passes allow you to optimize pieces of different circuit types ([Clifford](/api/qiskit/qiskit.quantum_info.Clifford), [Linear Function](/api/qiskit/qiskit.circuit.library.LinearFunction), [Permutation](/api/qiskit/qiskit.circuit.library.Permutation#permutation), Pauli Network) by re-synthesizing them. A typical way to use the synthesis pass is as follows:
+The AI circuit synthesis passes allow you to optimize pieces of different circuit types ([Clifford](/api/qiskit/quantum-info-clifford), [Linear Function](/api/qiskit/circuit-library-linear-function), [Permutation](/api/qiskit/circuit-library-permutation#permutation), Pauli Network) by re-synthesizing them. A typical way to use the synthesis pass is as follows:
 
 ```python
 from qiskit.transpiler import PassManager
@@ -93,9 +93,9 @@ The synthesis respects the coupling map of the device: it can be run safely afte
 
 The following synthesis passes are available from `qiskit_ibm_transpiler.ai.synthesis`:
 
-- *AICliffordSynthesis*: Synthesis for [Clifford](/api/qiskit/qiskit.quantum_info.Clifford) circuits (blocks of `H`, `S`, and `CX` gates). Currently up to nine qubit blocks.
-- *AILinearFunctionSynthesis*: Synthesis for [Linear Function](/api/qiskit/qiskit.circuit.library.LinearFunction) circuits (blocks of `CX` and `SWAP` gates). Currently up to nine qubit blocks.
-- *AIPermutationSynthesis*: Synthesis for [Permutation](/api/qiskit/qiskit.circuit.library.Permutation#permutation) circuits (blocks of `SWAP` gates). Currently available for 65, 33, and 27 qubit blocks.
+- *AICliffordSynthesis*: Synthesis for [Clifford](/api/qiskit/quantum-info-clifford) circuits (blocks of `H`, `S`, and `CX` gates). Currently up to nine qubit blocks.
+- *AILinearFunctionSynthesis*: Synthesis for [Linear Function](/api/qiskit/circuit-library-linear-function) circuits (blocks of `CX` and `SWAP` gates). Currently up to nine qubit blocks.
+- *AIPermutationSynthesis*: Synthesis for [Permutation](/api/qiskit/circuit-library-permutation#permutation) circuits (blocks of `SWAP` gates). Currently available for 65, 33, and 27 qubit blocks.
 - *AIPauliNetworkSynthesis*: Synthesis for Pauli Network circuits (blocks of `H`, `S`, `SX`, `CX`, `RX`, `RY` and `RZ` gates). Currently up to six qubit blocks. This pass is only available in the Qiskit Transpiler Service, not locally.
 
 We expect to gradually increase the size of the supported blocks.
