--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -90,7 +90,7 @@
     "Once the circuits are submitted to the function, they are transpiled and\n",
     "optimized to minimize the number of layers with two-qubit gates (the noisier\n",
     "gates on quantum devices). The noise affecting the layers is learned through\n",
-    "[Qiskit Runtime](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.noise_learner.NoiseLearner)\n",
+    "[Qiskit Runtime](/api/qiskit-ibm-runtime/noise-learner-noise-learner)\n",
     "using a sparse Pauli-Lindblad noise model as described in E. van den Berg, Z.\n",
     "Minev, A. Kandala, K. Temme, Nat. Phys. (2023).\n",
     "[arXiv:2201.09866](https://arxiv.org/abs/2201.09866).\n",
@@ -288,12 +288,12 @@
    "source": [
     "## Outputs\n",
     "\n",
-    "A Qiskit [PrimitiveResults](/api/qiskit/qiskit.primitives.PrimitiveResult) containing the TEM-mitigated result. The result for each PUB is returned as a [PubResult](/api/qiskit/qiskit.primitives.PubResult) containing the following fields:\n",
+    "A Qiskit [PrimitiveResults](/api/qiskit/primitives-primitive-result) containing the TEM-mitigated result. The result for each PUB is returned as a [PubResult](/api/qiskit/primitives-pub-result) containing the following fields:\n",
     "\n",
     "\n",
     "Name |Type | Description\n",
     "-- | -- | --\n",
-    "data | DataBin | A Qiskit [DataBin](/api/qiskit/qiskit.primitives.DataBin) containing the TEM mitigated observable and its standard error. The DataBin has the following fields: <ul><li>`evs`: The TEM-mitigated observable value.</li><li>`stds`: The standard error of the TEM-mitigated observable.</li></ul>\n",
+    "data | DataBin | A Qiskit [DataBin](/api/qiskit/primitives-data-bin) containing the TEM mitigated observable and its standard error. The DataBin has the following fields: <ul><li>`evs`: The TEM-mitigated observable value.</li><li>`stds`: The standard error of the TEM-mitigated observable.</li></ul>\n",
     "metadadata | dict | A dictionary containing additional results. The dictionary contains the following keys: <ul><li>`\"evs_non_mitigated\"`: The observable value without error mitigation.</li><li>`\"stds_non_mitigated\"`: The standard error of the result without error mitigation.</li><li>`\"evs_mitigated_no_readout_mitigation\"`: The observable value with error mitigation but without readout error mitigation.</li><li>`\"stds_mitigated_no_readout_mitigation\"`: The standard error of the result with error mitigation but without readout error mitigation.</li><li>`\"evs_non_mitigated_with_readout_mitigation\"`: The observable value without error mitigation but with readout error mitigation.</li><li>`\"stds_non_mitigated_with_readout_mitigation\"`: The standard error of the result without error mitigation but with readout error mitigation.</li></ul>"
    ]
   },
