--- a/docs/guides/circuit-library.ipynb
+++ b/docs/guides/circuit-library.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "The Qiskit SDK includes a library of popular circuits to use as building blocks in your own programs. Using pre-defined circuits saves time researching, writing code, and debugging. The library includes popular circuits in quantum computing, circuits that are difficult to simulate classically, and circuits useful for quantum hardware benchmarking.\n",
     "\n",
-    "This page lists the different circuit categories the library provides. For a full list of circuits, see the [circuit library API documentation](/api/qiskit/circuit_library)."
+    "This page lists the different circuit categories the library provides. For a full list of circuits, see the [circuit library API documentation](/api/qiskit/circuit-library)."
    ]
   },
   {
@@ -102,7 +102,7 @@
    "id": "e5066595",
    "metadata": {},
    "source": [
-    "See [Standard gates](/api/qiskit/circuit_library#standard-gates) in the circuit library API documentation.\n",
+    "See [Standard gates](/api/qiskit/circuit-library#standard-gates) in the circuit library API documentation.\n",
     "\n",
     "<CodeAssistantAdmonition\n",
     "  tagLine=\"Not sure what your gate's called? Try asking Qiskit Code Assistant.\"\n",
@@ -224,7 +224,7 @@
    "id": "78772993-d0da-4651-9211-706e86a59432",
    "metadata": {},
    "source": [
-    "For more information, see [N-local gates](/api/qiskit/circuit_library#n-local-circuits) in the circuit library API documentation or take our [Variational algorithm design course](https://learning.quantum.ibm.com/course/variational-algorithm-design)."
+    "For more information, see [N-local gates](/api/qiskit/circuit-library#n-local-circuits) in the circuit library API documentation or take our [Variational algorithm design course](https://learning.quantum.ibm.com/course/variational-algorithm-design)."
    ]
   },
   {
@@ -277,7 +277,7 @@
    "id": "031bf004-ca80-4cc0-b153-2cd5cd778386",
    "metadata": {},
    "source": [
-    "See [Data encoding circuits](/api/qiskit/circuit_library#data-encoding-circuits) in the circuit library API documentation."
+    "See [Data encoding circuits](/api/qiskit/circuit-library#data-encoding-circuits) in the circuit library API documentation."
    ]
   },
   {
@@ -334,7 +334,7 @@
    "id": "e2dad12f-535a-4f42-8ac4-dbfcfb5533cc",
    "metadata": {},
    "source": [
-    "Read the [`PauliEvolutionGate` API documentation](/api/qiskit/qiskit.circuit.library.PauliEvolutionGate)."
+    "Read the [`PauliEvolutionGate` API documentation](/api/qiskit/circuit-library-pauli-evolution-gate)."
    ]
   },
   {
@@ -385,7 +385,7 @@
    "source": [
     "The circuit library also includes circuits believed to be hard to simulate classically, such as instantaneous quantum polynomial (IQP) circuits. These circuits sandwich certain diagonal gates (in the computational basis) between blocks of Hadamard gates.\n",
     "\n",
-    "Other circuits include `GroverOperator` for use in Grover's algorithm, and the `FourierChecking` circuit for the Fourier checking problem. See these circuits in [Particular quantum circuits](/api/qiskit/circuit_library#particular-quantum-circuits) in the circuit library API documentation."
+    "Other circuits include `GroverOperator` for use in Grover's algorithm, and the `FourierChecking` circuit for the Fourier checking problem. See these circuits in [Particular quantum circuits](/api/qiskit/circuit-library#particular-quantum-circuits) in the circuit library API documentation."
    ]
   },
   {
@@ -488,7 +488,7 @@
    "id": "cbd99d49-eb5c-4cd5-bac2-528497b8405e",
    "metadata": {},
    "source": [
-    "See [Arithmetic circuits](/api/qiskit/circuit_library#arithmetic-circuits) in the circuit library API documentation."
+    "See [Arithmetic circuits](/api/qiskit/circuit-library#arithmetic-circuits) in the circuit library API documentation."
    ]
   },
   {
@@ -501,7 +501,7 @@
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "  -  Learn advanced methods for creating circuits in the [Construct circuits](./construct-circuits) topic.\n",
     "  -  See an example of circuits being used in the [Grover's Algorithm](https://learning.quantum.ibm.com/tutorial/grovers-algorithm) tutorial.\n",
-    "  -  Review the [circuit library API](/api/qiskit/circuit_library) reference.\n",
+    "  -  Review the [circuit library API](/api/qiskit/circuit-library) reference.\n",
     "</Admonition>"
    ]
   }
