--- a/docs/guides/common-parameters.ipynb
+++ b/docs/guides/common-parameters.ipynb
@@ -46,7 +46,7 @@
    "id": "05fb8adb-3b36-4449-b669-108d2d749ca5",
    "metadata": {},
    "source": [
-    "This page describes some of the more commonly used parameters for local transpilation. These parameters are configured using arguments to [`generate_preset_pass_manager`](/api/qiskit/transpiler_preset#generate_preset_pass_manager) or [`transpile`](/api/qiskit/compiler#qiskit.compiler.transpile).\n",
+    "This page describes some of the more commonly used parameters for local transpilation. These parameters are configured using arguments to [`generate_preset_pass_manager`](/api/qiskit/transpiler-preset#generate_preset_pass_manager) or [`transpile`](/api/qiskit/compiler#qiskit.compiler.transpile).\n",
     "\n",
     "<span id=\"approx-degree\"></span>\n",
     "## Approximation degree\n",
@@ -148,7 +148,7 @@
     "\n",
     "Before transpilation, the qubits contained in your circuit are virtual qubits that don't necessarily correspond to physical qubits on the target backend. You can specify the initial mapping of virtual qubits to physical qubits using the `initial_layout` argument. Note that the final qubit layout may differ from the initial layout because the transpiler may permute qubits using swap gates or other means.\n",
     "\n",
-    "In the example below, we construct an initial layout for the [`FakeSherbrooke`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.fake_provider.FakeSherbrooke#fakesherbrooke) mock backend by creating a [`Layout`](/api/qiskit/qiskit.transpiler.Layout) object. Our layout maps the first qubit of our circuit to qubit 5 of Sherbrooke, and it maps the second qubit of our circuit to qubit 6 of Sherbrooke. Note that physical qubits are always represented by integers."
+    "In the example below, we construct an initial layout for the [`FakeSherbrooke`](/api/qiskit-ibm-runtime/fake-provider-fake-sherbrooke#fakesherbrooke) mock backend by creating a [`Layout`](/api/qiskit/transpiler-layout) object. Our layout maps the first qubit of our circuit to qubit 5 of Sherbrooke, and it maps the second qubit of our circuit to qubit 6 of Sherbrooke. Note that physical qubits are always represented by integers."
    ]
   },
   {
@@ -234,7 +234,7 @@
    "id": "d2034dd5-23e5-4473-89b8-aaf4233775c7",
    "metadata": {},
    "source": [
-    "You can use the [`plot_error_map`](/api/qiskit/qiskit.visualization.plot_error_map) function to generate a diagram of the device graph with error information and with the physical qubits labeled. You can also view similar diagrams at https://quantum.ibm.com/services/resources."
+    "You can use the [`plot_error_map`](/api/qiskit/visualization-plot-error-map) function to generate a diagram of the device graph with error information and with the physical qubits labeled. You can also view similar diagrams at https://quantum.ibm.com/services/resources."
    ]
   },
   {
@@ -290,7 +290,7 @@
     "* `unitary_synthesis_method` (str) - The name of the unitary synthesis method to use. By default `default` is used.\n",
     "\n",
     "<Admonition>\n",
-    "  To see a list of all installed plugins for a given stage, run [`list_stage_plugins(\"stage_name\")`](https://docs.quantum.ibm.com/api/qiskit/transpiler_plugins#plugin-api). For example, if you want to see a list of all installed plugins for the routing stage, run `list_stage_plugins(routing)`.\n",
+    "  To see a list of all installed plugins for a given stage, run [`list_stage_plugins(\"stage_name\")`](https://docs.quantum.ibm.com/api/qiskit/transpiler-plugins#plugin-api). For example, if you want to see a list of all installed plugins for the routing stage, run `list_stage_plugins(routing)`.\n",
     "</Admonition>\n",
     "\n",
     "## Next steps\n",
