--- a/docs/guides/configure-qiskit-local.mdx
+++ b/docs/guides/configure-qiskit-local.mdx
@@ -31,14 +31,14 @@ By default, this file is in `~/.qiskit/settings.conf` but the path can be overri
 - `circuit_drawer`: Changes the default system for the circuit drawer. It can be set to `latex`, `mpl`, `text`, or `latex_source`. When the output kwarg is not explicitly set, this drawer system is used.
 - `circuit_mpl_style`: The default style sheet used for the mpl output system for the circuit drawer. Valid values are `default` or `bw`.
 - `circuit_mpl_style_path`: The paths to have the circuit drawer use to look for JSON style sheets when using the mpl output mode.
-- `state_drawer`: This is used to change the default system for the state visualization draw methods. Valid values are `repr`, `text`, `latex`, `latex_source`, `qsphere`, `hinton`, or `bloch`. When the output kwarg is not explicitly set on the [qiskit.quantum_info.DensityMatrix.draw](../api/qiskit/qiskit.quantum_info.DensityMatrix#densitymatrix) method, the specified output method is used.
+- `state_drawer`: This is used to change the default system for the state visualization draw methods. Valid values are `repr`, `text`, `latex`, `latex_source`, `qsphere`, `hinton`, or `bloch`. When the output kwarg is not explicitly set on the [qiskit.quantum_info.DensityMatrix.draw](../api/qiskit/quantum-info-density-matrix#densitymatrix) method, the specified output method is used.
 - `transpile_optimization_level`: Change the default optimization level for [qiskit.compiler.transpile](../api/qiskit/compiler#circuit-and-pulse-compilation-functions). Specify an integer 0-3.
-- `parallel`: Whether Python multiprocessing is enabled for operations that support running in parallel.  For example, transpilation of multiple [qiskit.circuit.QuantumCircuit](../api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit-class) objects. This setting can be overridden by the `QISKIT_PARALLEL` environment variable. Specify a boolean value.
+- `parallel`: Whether Python multiprocessing is enabled for operations that support running in parallel.  For example, transpilation of multiple [qiskit.circuit.QuantumCircuit](../api/qiskit/circuit-quantum-circuit#quantumcircuit-class) objects. This setting can be overridden by the `QISKIT_PARALLEL` environment variable. Specify a boolean value.
 - `num_processes`: The maximum number of parallel processes to launch for parallel operations if parallel execution is enabled. This setting can be overridden by the `QISKIT_NUM_PROCS` environment variable. Specify an integer greater than `0`. 
 
 <Admonition type="note">
-    * Circuit drawer settings apply to [qiskit.circuit.QuantumCircuit.draw](../api/qiskit/qiskit.circuit.QuantumCircuit) and [qiskit.visualization.circuit_drawer.](../api/qiskit/qiskit.visualization.circuit_drawer#qiskitvisualizationcircuit_drawer)
-    * State visualization draw methods are [qiskit.quantum_info.Statevector.draw](../api/qiskit/qiskit.quantum_info.Statevector#statevector) and [qiskit.quantum_info.DensityMatrix.draw.](../api/qiskit/qiskit.quantum_info.Statevector#statevector)
+    * Circuit drawer settings apply to [qiskit.circuit.QuantumCircuit.draw](../api/qiskit/circuit-quantum-circuit) and [qiskit.visualization.circuit_drawer.](../api/qiskit/visualization-circuit-drawer#qiskitvisualizationcircuit_drawer)
+    * State visualization draw methods are [qiskit.quantum_info.Statevector.draw](../api/qiskit/quantum-info-statevector#statevector) and [qiskit.quantum_info.DensityMatrix.draw.](../api/qiskit/quantum-info-statevector#statevector)
 </Admonition>
 
 ## Environment variables
