--- a/docs/guides/defaults-and-configuration-options.ipynb
+++ b/docs/guides/defaults-and-configuration-options.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "Abstract circuits need to be transpiled because QPUs have a limited set of basis gates and cannot execute arbitrary operations. The transpiler's function is to change arbitrary circuits so that they can run on a specified QPU.  This is done by translating the circuits to the supported basis gates, and by introducing SWAP gates as needed, so that the circuit's connectivity matches that of the QPU.\n",
     "\n",
-    "As explained in [Transpile with pass managers](transpile-with-pass-managers), you can create a [pass manager](/api/qiskit/qiskit.transpiler.PassManager) using the [`generate_preset_pass_manager`](/api/qiskit/transpiler_preset#qiskit.transpiler.preset_passmanagers.generate_preset_pass_manager) function and pass a circuit or list of circuits to its [run](/api/qiskit/qiskit.transpiler.PassManager#run) method to transpile them. You can call `generate_preset_pass_manager` passing only the optimization level and backend, choosing to use the defaults for all other options, or you can pass additional arguments to the function to fine-tune the transpilation.\n",
+    "As explained in [Transpile with pass managers](transpile-with-pass-managers), you can create a [pass manager](/api/qiskit/transpiler-pass-manager) using the [`generate_preset_pass_manager`](/api/qiskit/transpiler-preset#qiskit.transpiler.preset_passmanagers.generate_preset_pass_manager) function and pass a circuit or list of circuits to its [run](/api/qiskit/transpiler-pass-manager#run) method to transpile them. You can call `generate_preset_pass_manager` passing only the optimization level and backend, choosing to use the defaults for all other options, or you can pass additional arguments to the function to fine-tune the transpilation.\n",
     "\n",
     "## Basic usage without parameters\n",
     "\n",
@@ -146,7 +146,7 @@
    "source": [
     "## All available parameters\n",
     "\n",
-    "Following are all of the available parameters for the [`generate_preset_pass_manager`](/api/qiskit/transpiler_preset#qiskit.transpiler.preset_passmanagers.generate_preset_pass_manager) function.  There are two classes of arguments: those that describe the target of compilation, and those that influence how the transpiler works.\n",
+    "Following are all of the available parameters for the [`generate_preset_pass_manager`](/api/qiskit/transpiler-preset#qiskit.transpiler.preset_passmanagers.generate_preset_pass_manager) function.  There are two classes of arguments: those that describe the target of compilation, and those that influence how the transpiler works.\n",
     "\n",
     "\n",
     "All parameters except `optimization_level` are optional.  For full details, see the [Transpiler API documentation](/api/qiskit/transpiler#transpiler-api).\n",
@@ -255,7 +255,7 @@
     "- `seed_transpiler` (int) - Sets random seeds for the stochastic parts of the transpiler.\n",
     "</details>\n",
     "\n",
-    "The following default values are used if you don't specify any of the above parameters. Refer to the method's [API reference page](../api/qiskit/transpiler_preset) for more information:"
+    "The following default values are used if you don't specify any of the above parameters. Refer to the method's [API reference page](../api/qiskit/transpiler-preset) for more information:"
    ]
   },
   {
