--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -33,7 +33,7 @@ You can see information about your instances programmatically or in the user int
 
 ### List your instances programmatically
 
-You can view a list of your instances on your [account settings page](https://quantum.ibm.com/account), or you can use [the `instances()` method](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#instances).
+You can view a list of your instances on your [account settings page](https://quantum.ibm.com/account), or you can use [the `instances()` method](../api/qiskit-ibm-runtime/qiskit-runtime-service#instances).
 
 <span id="switch-instances"></span>
 ### View instances in the IBM Quantum interface
@@ -110,5 +110,5 @@ To leave an instance, visit the instance list on your [Account page.](https://qu
 
 <Admonition type="tip" title="Recommendations">
     - Try the [Grover's algorithm](https://learning.quantum.ibm.com/tutorial/grovers-algorithm) tutorial.
-    - Review the [QiskitRuntimeService instances method](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#instances) reference.
+    - Review the [QiskitRuntimeService instances method](/api/qiskit-ibm-runtime/qiskit-runtime-service#instances) reference.
 </Admonition>
