--- a/docs/guides/represent-quantum-computers.ipynb
+++ b/docs/guides/represent-quantum-computers.ipynb
@@ -48,8 +48,8 @@
    "source": [
     "To convert an abstract circuit to an ISA circuit that can run on a specific QPU (quantum processing unit), the transpiler needs certain information about the QPU. This information is found in two places: the `BackendV2` (or legacy `BackendV1`) object you plan to submit jobs to, and the backend's `Target` attribute.\n",
     "\n",
-    "- The [`Target`](../api/qiskit/qiskit.transpiler.Target) contains all the relevant constraints of a device, such as its native basis gates, qubit connectivity, and pulse or timing information.\n",
-    "- The [`Backend`](../api/qiskit/qiskit.providers.BackendV2) possesses a `Target` by default, contains additional information -- such as the [`InstructionScheduleMap`](../api/qiskit/qiskit.pulse.InstructionScheduleMap), and provides the interface for submitting quantum circuit jobs.\n",
+    "- The [`Target`](../api/qiskit/transpiler-target) contains all the relevant constraints of a device, such as its native basis gates, qubit connectivity, and pulse or timing information.\n",
+    "- The [`Backend`](../api/qiskit/providers-backend-v-2) possesses a `Target` by default, contains additional information -- such as the [`InstructionScheduleMap`](../api/qiskit/pulse-instruction-schedule-map), and provides the interface for submitting quantum circuit jobs.\n",
     "\n",
     "You can also explicitly provide information for the transpiler to use, for example, if you have a specific use case, or if you believe this information will help the transpiler generate a more optimized circuit.\n",
     "\n",
@@ -60,7 +60,7 @@
     "Because many of the underlying transpilation algorithms are stochastic, there is no guarantee that a better circuit will be found.\n",
     "</Admonition>\n",
     "\n",
-    "This page shows several examples of passing QPU information to the transpiler. These examples use the target from the [`FakeSherbrooke`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.fake_provider.FakeSherbrooke#fakesherbrooke) mock backend.\n",
+    "This page shows several examples of passing QPU information to the transpiler. These examples use the target from the [`FakeSherbrooke`](/api/qiskit-ibm-runtime/fake-provider-fake-sherbrooke#fakesherbrooke) mock backend.\n",
     "\n",
     "<span id=\"default-config\"></span>\n",
     "## Default configuration\n",
@@ -68,9 +68,9 @@
     "The simplest use of the transpiler is to provide all the QPU information by providing the `Backend` or `Target`. To better understand how the transpiler works, construct a circuit and transpile it with different information, as follows.\n",
     "\n",
     "Import the necessary libraries and instantiate the QPU:\n",
-    "In order to convert an abstract circuit to an ISA circuit that can run on a specific processor, the transpiler needs certain information about the processor.  Typically, this information is stored in the [`Backend`](/api/qiskit/qiskit.providers.Backend#backend) or [`Target`](/api/qiskit/qiskit.transpiler.Target#target) provided to the transpiler, and no further information is needed. However, you can also explicitly provide information for the transpiler to use, for example, if you have a specific use case, or if you believe this information will help the transpiler generate a more optimized circuit.\n",
+    "In order to convert an abstract circuit to an ISA circuit that can run on a specific processor, the transpiler needs certain information about the processor.  Typically, this information is stored in the [`Backend`](/api/qiskit/providers-backend#backend) or [`Target`](/api/qiskit/transpiler-target#target) provided to the transpiler, and no further information is needed. However, you can also explicitly provide information for the transpiler to use, for example, if you have a specific use case, or if you believe this information will help the transpiler generate a more optimized circuit.\n",
     "\n",
-    "This topic shows several examples of passing information to the transpiler. These examples use the target from the [`FakeSherbrooke`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.fake_provider.FakeSherbrooke#fakesherbrooke) mock backend."
+    "This topic shows several examples of passing information to the transpiler. These examples use the target from the [`FakeSherbrooke`](/api/qiskit-ibm-runtime/fake-provider-fake-sherbrooke#fakesherbrooke) mock backend."
    ]
   },
   {
@@ -91,7 +91,7 @@
    "id": "4064b5ad-8a3a-462b-ae30-29576230c084",
    "metadata": {},
    "source": [
-    "The example circuit uses an instance of [`EfficientSU2`](/api/qiskit/qiskit.circuit.library.EfficientSU2#efficientsu2) from Qiskit's circuit library.\n",
+    "The example circuit uses an instance of [`EfficientSU2`](/api/qiskit/circuit-library-efficient-su-2#efficient-su2) from Qiskit's circuit library.\n",
     "The following cell decomposes the circuit before drawing it to show its gate structure."
    ]
   },
@@ -337,7 +337,7 @@
    "source": [
     "## Basis gates\n",
     "\n",
-    "Every quantum computer supports a limited instruction set, called its _basis gates_.  Every gate in the circuit must be translated to the elements of this set. This set should consist of single- and two-qubit gates that provide a universal gates set, meaning that any quantum operation can be decomposed into those gates.  This is done by the [BasisTranslator](../api/qiskit/qiskit.transpiler.passes.BasisTranslator), and the basis gates can be specified as a keyword argument to the transpiler to provide this information."
+    "Every quantum computer supports a limited instruction set, called its _basis gates_.  Every gate in the circuit must be translated to the elements of this set. This set should consist of single- and two-qubit gates that provide a universal gates set, meaning that any quantum operation can be decomposed into those gates.  This is done by the [BasisTranslator](../api/qiskit/transpiler-passes-basis-translator), and the basis gates can be specified as a keyword argument to the transpiler to provide this information."
    ]
   },
   {
@@ -364,7 +364,7 @@
    "id": "6e9aed06",
    "metadata": {},
    "source": [
-    "The default single-qubit gates on _ibm_sherbrooke_ are `rz`, `x`, and `sx`, and the default two-qubit gate is `ecr` (echoed cross-resonance). CX gates are constructed from `ecr` gates, so on some QPUs `ecr` is specified as the two-qubit basis gate, while on others `cx` is the default. The `ecr` gate is the _entangling_ part of the `cx` gate. To use a gate that is not in the basis gate set, follow instructions in the Qiskit SDK API documentation for custom gates using [pulse gates](/api/qiskit/qiskit.transpiler.passes.PulseGates#pulsegates). In addition to the control gates, there are also `delay` and `measurement` instructions.\n",
+    "The default single-qubit gates on _ibm_sherbrooke_ are `rz`, `x`, and `sx`, and the default two-qubit gate is `ecr` (echoed cross-resonance). CX gates are constructed from `ecr` gates, so on some QPUs `ecr` is specified as the two-qubit basis gate, while on others `cx` is the default. The `ecr` gate is the _entangling_ part of the `cx` gate. To use a gate that is not in the basis gate set, follow instructions in the Qiskit SDK API documentation for custom gates using [pulse gates](/api/qiskit/transpiler-passes-pulse-gates#pulsegates). In addition to the control gates, there are also `delay` and `measurement` instructions.\n",
     "\n",
     "<Admonition type=\"note\">\n",
     "    QPUs have default basis gates, but you can choose whatever gates you want, as long as you provide the instruction or add pulse gates (see [Create transpiler passes.](custom-transpiler-pass)) The default basis gates are those that calibrations have been done for on the QPU, so no further instruction/pulse gates need to be provided. For example, on some QPUs `cx` is the default two-qubit gate and `ecr` on others. See the [Native gates and operations](./native-gates) topic for more details.\n",
