--- a/docs/guides/run-jobs-session.mdx
+++ b/docs/guides/run-jobs-session.mdx
@@ -211,6 +211,6 @@ with Session(backend=backend) as session:
 
 <Admonition type="tip" title="Recommendations">
   - Try an example in the [Quantum approximate optimization algorithm (QAOA)](https://learning.quantum.ibm.com/tutorial/quantum-approximate-optimization-algorithm) tutorial.
-  - Review the [Session API](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.Session) reference.
+  - Review the [Session API](/api/qiskit-ibm-runtime/session) reference.
   - Understand the [Job limits](/guides/job-limits) when sending a job to an IBM&reg; QPU.
 </Admonition>
