--- a/docs/guides/transpile-with-pass-managers.ipynb
+++ b/docs/guides/transpile-with-pass-managers.ipynb
@@ -56,11 +56,11 @@
    "source": [
     "## What is a (staged) pass manager?\n",
     "\n",
-    "In the context of the Qiskit SDK, transpilation refers to the process of transforming an input circuit into a form that is suitable for execution on a quantum device. Transpilation typically occurs in a sequence of steps called transpiler passes. The circuit is processed by each transpiler pass in sequence, with the output of one pass becoming the input to the next. For example, one pass could go through the circuit and merge all consecutive sequences of single-qubit gates, and then the next pass could synthesize these gates into the basis set of the target device. The transpiler passes included with Qiskit are located in the [qiskit.transpiler.passes](/api/qiskit/transpiler_passes) module.\n",
+    "In the context of the Qiskit SDK, transpilation refers to the process of transforming an input circuit into a form that is suitable for execution on a quantum device. Transpilation typically occurs in a sequence of steps called transpiler passes. The circuit is processed by each transpiler pass in sequence, with the output of one pass becoming the input to the next. For example, one pass could go through the circuit and merge all consecutive sequences of single-qubit gates, and then the next pass could synthesize these gates into the basis set of the target device. The transpiler passes included with Qiskit are located in the [qiskit.transpiler.passes](/api/qiskit/transpiler-passes) module.\n",
     "\n",
-    "A pass manager is an object that stores a list of transpiler passes and can execute them on a circuit. Create a pass manager by initializing a [`PassManager`](/api/qiskit/qiskit.transpiler.PassManager) with a list of transpiler passes. To run the transpilation on a circuit, call the [`run`](/api/qiskit/qiskit.transpiler.PassManager#run) method with a circuit as input.\n",
+    "A pass manager is an object that stores a list of transpiler passes and can execute them on a circuit. Create a pass manager by initializing a [`PassManager`](/api/qiskit/transpiler-pass-manager) with a list of transpiler passes. To run the transpilation on a circuit, call the [`run`](/api/qiskit/transpiler-pass-manager#run) method with a circuit as input.\n",
     "\n",
-    "A staged pass manager is a special kind of pass manager that represents a level of abstraction above that of a normal pass manager. While a normal pass manager is composed of several transpiler passes, a staged pass manager is composed of several *pass managers*. This is a useful abstraction because transpilation typically happens in discrete stages, as described in [Transpiler stages](transpiler-stages), with each stage being represented by a pass manager. Staged pass managers are represented by the [`StagedPassManager`](/api/qiskit/qiskit.transpiler.StagedPassManager) class. The rest of this page describes how to create and customize (staged) pass managers."
+    "A staged pass manager is a special kind of pass manager that represents a level of abstraction above that of a normal pass manager. While a normal pass manager is composed of several transpiler passes, a staged pass manager is composed of several *pass managers*. This is a useful abstraction because transpilation typically happens in discrete stages, as described in [Transpiler stages](transpiler-stages), with each stage being represented by a pass manager. Staged pass managers are represented by the [`StagedPassManager`](/api/qiskit/transpiler-staged-pass-manager) class. The rest of this page describes how to create and customize (staged) pass managers."
    ]
   },
   {
@@ -70,7 +70,7 @@
    "source": [
     "## Generate a preset staged pass manager\n",
     "\n",
-    "To create a preset staged pass manager with reasonable defaults, use the [`generate_preset_pass_manager`](/api/qiskit/transpiler_preset#qiskit.transpiler.preset_passmanagers.generate_preset_pass_manager) function:"
+    "To create a preset staged pass manager with reasonable defaults, use the [`generate_preset_pass_manager`](/api/qiskit/transpiler-preset#qiskit.transpiler.preset_passmanagers.generate_preset_pass_manager) function:"
    ]
   },
   {
@@ -162,7 +162,7 @@
    "source": [
     "## Create your own pass manager\n",
     "\n",
-    "The [qiskit.transpiler.passes](/api/qiskit/transpiler_passes) module includes many transpiler passes that can be used to create pass managers. To create a pass manager, initialize a `PassManager` with a list of passes. For example, the following code creates a transpiler pass that merges adjacent two-qubit gates and then synthesizes them into a basis of [$R_y$](/api/qiskit/qiskit.circuit.library.RYGate), [$R_z$](/api/qiskit/qiskit.circuit.library.RZGate), and [$R_{xx}$](/api/qiskit/qiskit.circuit.library.RXXGate),  gates."
+    "The [qiskit.transpiler.passes](/api/qiskit/transpiler-passes) module includes many transpiler passes that can be used to create pass managers. To create a pass manager, initialize a `PassManager` with a list of passes. For example, the following code creates a transpiler pass that merges adjacent two-qubit gates and then synthesizes them into a basis of [$R_y$](/api/qiskit/circuit-library-ry-gate), [$R_z$](/api/qiskit/circuit-library-rz-gate), and [$R_{xx}$](/api/qiskit/circuit-library-rxx-gate),  gates."
    ]
   },
   {
@@ -345,9 +345,9 @@
    "id": "b1b35114-458e-4ac6-9829-9bbeabfa2d17",
    "metadata": {},
    "source": [
-    "The [stage generator functions](/api/qiskit/transpiler_preset#stage-generator-functions) might be useful for constructing custom pass managers.\n",
+    "The [stage generator functions](/api/qiskit/transpiler-preset#stage-generator-functions) might be useful for constructing custom pass managers.\n",
     "They generate stages that provide common functionality used in many pass managers.\n",
-    "For example, [`generate_embed_passmanager`](/api/qiskit/transpiler_preset#qiskit.transpiler.preset_passmanagers.common.generate_embed_passmanager) can be used to generate a stage\n",
+    "For example, [`generate_embed_passmanager`](/api/qiskit/transpiler-preset#qiskit.transpiler.preset_passmanagers.common.generate_embed_passmanager) can be used to generate a stage\n",
     "to \"embed\" a selected initial `Layout` from a layout pass to the specified target device.\n",
     "\n",
     "## Next steps\n",
