--- a/docs/guides/visualize-circuits.ipynb
+++ b/docs/guides/visualize-circuits.ipynb
@@ -360,7 +360,7 @@
     "\n",
     "The `fold` argument sets a maximum width for the output. In the `text` renderer, this sets the length of the lines of the diagram before it is wrapped to the next line.  When using the 'mpl' renderer, this is the number of (visual) layers before folding to the next line.\n",
     "\n",
-    "The `mpl` renderer has the `style` kwarg, which changes the colors and outlines. See the [API documentation](/api/qiskit/qiskit.circuit.QuantumCircuit#draw) for more details.\n",
+    "The `mpl` renderer has the `style` kwarg, which changes the colors and outlines. See the [API documentation](/api/qiskit/circuit-quantum-circuit#draw) for more details.\n",
     "\n",
     "The `scale` option scales the output of the `mpl` and `latex` renderers."
    ]
