--- a/docs/migration-guides/qiskit-algorithms-module.mdx
+++ b/docs/migration-guides/qiskit-algorithms-module.mdx
@@ -35,9 +35,9 @@ introduced a higher-level execution paradigm, with the Estimator for computing e
 
 <Admonition type="caution">
   The transition away from [`qiskit.opflow`](/api/qiskit/0.46/opflow) affects the classes that algorithms use as part of the problem
-  setup. Most [`qiskit.opflow`](/api/qiskit/0.46/opflow) dependencies have a direct [`qiskit.quantum_info`](/api/qiskit/quantum_info)
+  setup. Most [`qiskit.opflow`](/api/qiskit/0.46/opflow) dependencies have a direct [`qiskit.quantum_info`](/api/qiskit/quantum-info)
   replacement. One common example is the class [`qiskit.opflow.primitive_ops.PauliSumOp`](/api/qiskit/0.46/qiskit.opflow.primitive_ops.PauliSumOp), used to define Hamiltonians
-  (for example, to plug into VQE), which can be replaced by [`qiskit.quantum_info.SparsePauliOp`](/api/qiskit/qiskit.quantum_info.SparsePauliOp).
+  (for example, to plug into VQE), which can be replaced by [`qiskit.quantum_info.SparsePauliOp`](/api/qiskit/quantum-info-sparse-pauli-op).
   For information to migrate other [`qiskit.opflow`](/api/qiskit/0.46/opflow) objects, refer to the [Opflow migration guide](./qiskit-opflow-module).
 </Admonition>
 
@@ -88,14 +88,14 @@ The classes in
 
 Once you know which primitive you want to use, choose the primitive implementation that meets your needs. For example:
 
-* For quick prototyping, use the reference implementations of primitives included in Qiskit: [`qiskit.primitives.Sampler`](/api/qiskit/qiskit.primitives.Sampler) and [`qiskit.primitives.Estimator`](/api/qiskit/qiskit.primitives.Estimator).
+* For quick prototyping, use the reference implementations of primitives included in Qiskit: [`qiskit.primitives.Sampler`](/api/qiskit/primitives-sampler) and [`qiskit.primitives.Estimator`](/api/qiskit/primitives-estimator).
 
 * For finer algorithm tuning, use a local simulator such as the primitive implementation in Aer: [`qiskit_aer.primitives.Sampler`](https://qiskit.org/ecosystem/aer/stubs/qiskit_aer.primitives.Sampler.html) and [`qiskit_aer.primitives.Estimator`](https://qiskit.org/ecosystem/aer/stubs/qiskit_aer.primitives.Estimator.html).
 
 * For running on quantum hardware choose from these options:
 
    - Access services with native primitive implementations, such as the Qiskit Runtime service, by using [`qiskit_ibm_runtime.Sampler`](/api/qiskit-ibm-runtime/0.26/qiskit_ibm_runtime.Sampler) and [`qiskit_ibm_runtime.Estimator`.](/api/qiskit-ibm-runtime/0.26/qiskit_ibm_runtime.Estimator)
-   - Wrap any QPU (quantum processing unti) with `Backend` primitives ([`qiskit.primitives.BackendSampler`](/api/qiskit/qiskit.primitives.BackendSampler) and [`qiskit.primitives.BackendEstimator`](/api/qiskit/qiskit.primitives.BackendEstimator)). These wrappers implement a primitive interface on top of a backend that only supports `backend.run()`.
+   - Wrap any QPU (quantum processing unti) with `Backend` primitives ([`qiskit.primitives.BackendSampler`](/api/qiskit/primitives-backend-sampler) and [`qiskit.primitives.BackendEstimator`](/api/qiskit/primitives-backend-estimator)). These wrappers implement a primitive interface on top of a backend that only supports `backend.run()`.
 
 For detailed information and examples, particularly on the use of the `Backend` primitives, refer to
 the [QuantumInstance migration guide](./qiskit-quantum-instance).
@@ -167,7 +167,7 @@ estimator = Estimator()
 
 The minimum eigensolver algorithms were refactored in a new location.
 Instead of a [`qiskit.utils.QuantumInstance`](/api/qiskit/0.46/qiskit.utils.QuantumInstance), [`qiskit.algorithms.minimum_eigensolvers`](/api/qiskit/0.46/qiskit.algorithms.minimum_eigensolvers) are now initialized
-by using an instance of the [`qiskit.primitives.Sampler`](/api/qiskit/qiskit.primitives.Sampler) or [`qiskit.primitives.Estimator`](/api/qiskit/qiskit.primitives.Estimator) primitive, depending
+by using an instance of the [`qiskit.primitives.Sampler`](/api/qiskit/primitives-sampler) or [`qiskit.primitives.Estimator`](/api/qiskit/primitives-estimator) primitive, depending
 on the algorithm. The legacy classes can still be found in `qiskit.algorithms.minimum_eigen_solvers`.
 
 <Admonition type="caution">
@@ -189,7 +189,7 @@ The legacy `qiskit.algorithms.minimum_eigen_solvers.VQE` class has now been spli
   [`qiskit.opflow.expectations.CVaRExpectation`](/api/qiskit/0.46/qiskit.opflow.expectations.CVaRExpectation).
 
 <Admonition type="note">
-  In addition to taking in an [`qiskit.primitives.Estimator`](/api/qiskit/qiskit.primitives.Estimator) instance instead of a [`qiskit.utils.QuantumInstance`](/api/qiskit/0.46/qiskit.utils.QuantumInstance),
+  In addition to taking in an [`qiskit.primitives.Estimator`](/api/qiskit/primitives-estimator) instance instead of a [`qiskit.utils.QuantumInstance`](/api/qiskit/0.46/qiskit.utils.QuantumInstance),
   the new [`qiskit.algorithms.minimum_eigensolvers.VQE`](/api/qiskit/0.46/qiskit.algorithms.minimum_eigensolvers.VQE) signature has undergone the following changes:
 
   * The `expectation` and `include_custom` parameters have been removed, as this functionality is now
@@ -345,7 +345,7 @@ The new QAOA only supports diagonal operators.  This is because the legacy `qisk
 extends [`qiskit.algorithms.minimum_eigensolvers.SamplingVQE`](/api/qiskit/0.46/qiskit.algorithms.minimum_eigensolvers.SamplingVQE).
 
 <Admonition type="note">
-  In addition to taking in a [`qiskit.primitives.Sampler`](/api/qiskit/qiskit.primitives.Sampler) instance instead of a [`qiskit.utils.QuantumInstance`](/api/qiskit/0.46/qiskit.utils.QuantumInstance),
+  In addition to taking in a [`qiskit.primitives.Sampler`](/api/qiskit/primitives-sampler) instance instead of a [`qiskit.utils.QuantumInstance`](/api/qiskit/0.46/qiskit.utils.QuantumInstance),
   the new [`qiskit.algorithms.minimum_eigensolvers.QAOA`](/api/qiskit/0.46/qiskit.algorithms.minimum_eigensolvers.QAOA) signature has undergone the following changes:
 
   * The `expectation` and `include_custom` parameters have been removed and the `aggregation`
@@ -358,7 +358,7 @@ extends [`qiskit.algorithms.minimum_eigensolvers.SamplingVQE`](/api/qiskit/0.46/
 </Admonition>
 
 <Admonition type="note">
-  If you want to run QAOA on a non-diagonal operator, use the [`qiskit.circuit.library.QAOAAnsatz`](/api/qiskit/qiskit.circuit.library.QAOAAnsatz) with
+  If you want to run QAOA on a non-diagonal operator, use the [`qiskit.circuit.library.QAOAAnsatz`](/api/qiskit/circuit-library-qaoa-ansatz) with
   [`qiskit.algorithms.minimum_eigensolvers.VQE`](/api/qiskit/0.46/qiskit.algorithms.minimum_eigensolvers.VQE), but there will be no state result.
   If your application requires the final probability distribution, instantiate `SamplerV2`
   and run it with the optimal circuit after [`qiskit.algorithms.minimum_eigensolvers.VQE`](/api/qiskit/0.46/qiskit.algorithms.minimum_eigensolvers.VQE).
@@ -481,7 +481,7 @@ For complete code examples, see the updated [VQE, callback, gradients, initial p
 
 The eigensolver algorithms were refactored in a new location.  Instead of using
 [`qiskit.utils.QuantumInstance`](/api/qiskit/0.46/qiskit.utils.QuantumInstance), [`qiskit.algorithms.eigensolvers`](/api/qiskit/0.46/qiskit.algorithms.eigensolvers) are now initialized
-using an instance of the [`qiskit.primitives.Sampler`](/api/qiskit/qiskit.primitives.Sampler) or [`qiskit.primitives.Estimator`](/api/qiskit/qiskit.primitives.Estimator) primitive, or
+using an instance of the [`qiskit.primitives.Sampler`](/api/qiskit/primitives-sampler) or [`qiskit.primitives.Estimator`](/api/qiskit/primitives-estimator) primitive, or
 a primitive-based subroutine, depending on the algorithm. The legacy classes can still be found
 in `qiskit.algorithms.eigen_solvers`.
 
@@ -497,12 +497,12 @@ implementation. You have to be careful, because the class name is the same.
 ### VQD
 
 The new [`qiskit.algorithms.eigensolvers.VQD`](/api/qiskit/0.46/qiskit.algorithms.eigensolvers.VQD) class is initialized with an instance of the
-[`qiskit.primitives.Estimator`](/api/qiskit/qiskit.primitives.Estimator) primitive instead of a [`qiskit.utils.QuantumInstance`](/api/qiskit/0.46/qiskit.utils.QuantumInstance).
+[`qiskit.primitives.Estimator`](/api/qiskit/primitives-estimator) primitive instead of a [`qiskit.utils.QuantumInstance`](/api/qiskit/0.46/qiskit.utils.QuantumInstance).
 It also takes an instance of a state fidelity class from mod:`qiskit.algorithms.state_fidelities`,
-such as the [`qiskit.primitives.Sampler`](/api/qiskit/qiskit.primitives.Sampler)-based [`qiskit.algorithms.state_fidelities.ComputeUncompute`](/api/qiskit/0.46/qiskit.algorithms.state_fidelities.ComputeUncompute).
+such as the [`qiskit.primitives.Sampler`](/api/qiskit/primitives-sampler)-based [`qiskit.algorithms.state_fidelities.ComputeUncompute`](/api/qiskit/0.46/qiskit.algorithms.state_fidelities.ComputeUncompute).
 
 <Admonition type="note">
-  In addition to taking in a [`qiskit.primitives.Estimator`](/api/qiskit/qiskit.primitives.Estimator) instance instead of a [`qiskit.utils.QuantumInstance`](/api/qiskit/0.46/qiskit.utils.QuantumInstance),
+  In addition to taking in a [`qiskit.primitives.Estimator`](/api/qiskit/primitives-estimator) instance instead of a [`qiskit.utils.QuantumInstance`](/api/qiskit/0.46/qiskit.utils.QuantumInstance),
   the new [`qiskit.algorithms.eigensolvers.VQD`](/api/qiskit/0.46/qiskit.algorithms.eigensolvers.VQD) signature has undergone the following changes:
 
   * The `expectation` and `include_custom` parameters have been removed, as this functionality is now
@@ -638,7 +638,7 @@ print(result.eigenvalues)
 
 The time evolvers were refactored in a new location.
 Instead of using a [`qiskit.utils.QuantumInstance`](/api/qiskit/0.46/qiskit.utils.QuantumInstance), `qiskit.algorithms.time_evolvers` are now initialized
-using a [`qiskit.primitives.Estimator`](/api/qiskit/qiskit.primitives.Estimator) primitive instance. The legacy classes can still be found
+using a [`qiskit.primitives.Estimator`](/api/qiskit/primitives-estimator) primitive instance. The legacy classes can still be found
 in `qiskit.algorithms.evolvers`.
 
 In addition to the migration, the module has been substantially expanded to include Variational Quantum Time Evolution
@@ -656,7 +656,7 @@ In addition to the migration, the module has been substantially expanded to incl
 </Admonition>
 
 <Admonition type="note">
-  In addition to taking in a [`qiskit.primitives.Estimator`](/api/qiskit/qiskit.primitives.Estimator) instance instead of a [`qiskit.utils.QuantumInstance`](/api/qiskit/0.46/qiskit.utils.QuantumInstance),
+  In addition to taking in a [`qiskit.primitives.Estimator`](/api/qiskit/primitives-estimator) instance instead of a [`qiskit.utils.QuantumInstance`](/api/qiskit/0.46/qiskit.utils.QuantumInstance),
   the new [`qiskit.algorithms.eigensolvers.VQD`](/api/qiskit/0.46/qiskit.algorithms.eigensolvers.VQD) signature has undergone the following changes:
 
   * The `expectation` parameter has been removed, as this functionality is now
@@ -734,7 +734,7 @@ q:  ┤ exp(it X) ├┤ exp(it Z) ├
 
 The amplitude amplifier algorithms were refactored in-place.
 Instead of a [`qiskit.utils.QuantumInstance`](/api/qiskit/0.46/qiskit.utils.QuantumInstance), `qiskit.algorithms.amplitude_amplifiers` are now initialized
-using an instance of any Sampler primitive.  That is, [`qiskit.primitives.Sampler`](/api/qiskit/qiskit.primitives.Sampler).
+using an instance of any Sampler primitive.  That is, [`qiskit.primitives.Sampler`](/api/qiskit/primitives-sampler).
 
 <Admonition type="note">
   The full `qiskit.algorithms.amplitude_amplifiers` module has been refactored in place. Therefore, you don't need to
@@ -773,7 +773,7 @@ For complete code examples, see the following updated tutorials:
 
 Similarly to the amplitude amplifiers, the amplitude estimators were refactored in-place.
 Instead of a [`qiskit.utils.QuantumInstance`](/api/qiskit/0.46/qiskit.utils.QuantumInstance), `qiskit.algorithms.amplitude_estimators` are now initialized
-using an instance of any Sampler primitive.  That is, [`qiskit.primitives.Sampler`](/api/qiskit/qiskit.primitives.Sampler).
+using an instance of any Sampler primitive.  That is, [`qiskit.primitives.Sampler`](/api/qiskit/primitives-sampler).
 
 <Admonition type="note">
   The full `qiskit.algorithms.amplitude_estimators` module has been refactored in place. You do not need to
@@ -816,7 +816,7 @@ For a complete code example, see the updated [Amplitude Estimation tutorial.](ht
 
 The phase estimators were refactored in-place.
 Instead of a [`qiskit.utils.QuantumInstance`](/api/qiskit/0.46/qiskit.utils.QuantumInstance), `qiskit.algorithms.phase_estimators` are now initialized by
-using an instance of any Sampler primitive.  That is, [`qiskit.primitives.Sampler`](/api/qiskit/qiskit.primitives.Sampler).
+using an instance of any Sampler primitive.  That is, [`qiskit.primitives.Sampler`](/api/qiskit/primitives-sampler).
 
 <Admonition type="note">
   The full `qiskit.algorithms.phase_estimators` module has been refactored in place. Therefore, you do not need to change import paths.
